--- a/index.html
+++ b/index.html
@@ -1,22 +1,59 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta name="freeCodeCamp-Redesigned">
-        <title>freeCodeCamp-Redesigned</title>
-        <link rel="stylesheet" href="styles/base.css">
-       <script src="scripts/main.js"></script>
-    </head>
+        <meta name="DIG2500-freeCodeCamp-Redesigned">
+        <title>DIG2500-freeCodeCamp-Redesigned</title>
+    <!--My stylesheets-->
+    <link rel="stylesheet" href="styles/base.css">
+
+
+    <!--Fonts-->
+    <!--Local Fonts-->
+    <link rel="stylesheet" href="/styles/fonts.css">
+        <!--Lato (any text except logo & headers)-->
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Lato" >
+    <!--Hack (for headers)-->
+    <link rel='stylesheet' href='//cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack.css'>
+    
+
+    <!--Assets-->
+        <!--Bootstrap-->
+            <!--Local Dependencies-->
+            <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+                <!--CDN Dependencies-->
+                <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+                integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+   
+            </head>
     <body>
         <nav>
 
         </nav>
         <main>
            <hgroup>
-               <h1>Hello wRLd</h1>
+               <h1 style="font-family: Hack; color:white;">Hello wRLd</h1>
            </hgroup> 
         </main>
         <footer>
 
         </footer>
+    <!--Scripts-->
+<!--My scripts-->
+<script src="scripts/main.js"></script>
+    <!--Assets-->
+        <!--Bootstrap-->
+           <!--Local Dependencies-->
+            <script src='assets/bootstrap/js/bootstrap.min.js'></script>
+             <!--CDN Dependencies-->
+            <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+                integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+                crossorigin="anonymous"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+                integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+                crossorigin="anonymous"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+                integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+                crossorigin="anonymous"></script>
     </body>
 </html>
