home-page-layed-out

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 <div class="parallax  jumbotron  text-center">
     <div class="parallax-content">
-    <a class="btn btn-lg btn-success learn-button" role="button" href="#"><i class="fa fa-edit fa-lg"></i>Start coding (it's free)</a>
+    <a class="btn btn-lg col-xs-12 btn-success learn-button" role="button" href="#"><i class="fa fa-edit fa-lg"></i>Start coding (it's free)</a>
     </div>
 </div>
 <div class=""></div>
@@ -71,19 +71,15 @@
             <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
         </div>
         <div class="col-sm-8">
-            <h3>Column 2</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+           <a href="#"> <img id="team-pic"src="/images/pics/team-diverse.jpeg" alt="fcc-team"></a>
         </div>
        
     </div>
     <br/>
         <div class="row">
-            <div class="col-sm-8">
-                <h3>Column 1</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
-            </div>
+        <div class="col-sm-8">
+            <a href="#"> <img id="stuck" src="/images/pics/photo-1456406644174-8ddd4cd52a06.jpeg" alt="fcc-team"></a>
+        </div>
             <div class="col-sm-4">
                 <h3>Column 2</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
