--- a/learn.html
+++ b/learn.html
@@ -42,35 +42,50 @@
                data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="true">
                <span class="navbar-toggler-icon"></span>
            </button>
+   <div class="navbar-collapse collapse collapsed" id="navbar-collapse">
+       <ul class="navbar-nav mr-auto">
 
-           <div class="navbar-collapse collapse collapsed" id="navbar-collapse">
-               <ul class="navbar-nav mr-auto">
+       </ul>
+       <ul class="navbar-nav ml-auto">
+           <li class="nav-item">
+               <a class="nav-link" href="/learn.html">
+                   <i class="fas fa-graduation-cap"></i>Curriculum</a>
+           </li>
+           <li class="nav-item">
+               <a class="nav-link" href="/donate.html">
+                   <i class="fas fa-donate"></i>Donate</a>
+           </li>
+           <li class="nav-item">
+               <a class="nav-link" href="/feed.html">
+                   <i class="fas fa-rss-square"></i>Feed</a>
+           </li>
+           <li class="nav-item">
+               <a class="nav-link" href="https://forum.freecodecamp.org/">
+                   <i class="far fa-comments"></i>Forums</a>
+           </li>
+           <li class="nav-item">
+               <a class="nav-link" href="/login.html">
+                   <i class="far fa-user-circle"></i>Sign in</a>
+           </li>
 
-               </ul>
-               <ul class="navbar-nav ml-auto">
-                   <li class="nav-item">
-                       <a class="nav-link" href="javascript:void(0)">
-                           <i class="fas fa-graduation-cap"></i>Curriculum</a>
-                   </li>
-                   <li class="nav-item">
-                       <a class="nav-link" href="javascript:void(0)">
-                           <i class="fas fa-rss-square"></i>Feed</a>
-                   </li>
-                   <li class="nav-item">
-                       <a class="nav-link" href="javascript:void(0)">
-                           <i class="far fa-comments"></i>Forums</a>
-                   </li>
-                   <li class="nav-item">
-                       <a class="nav-link" href="javascript:void(0)">
-                           <i class="far fa-user-circle"></i>Sign in</a>
-                   </li>
-               </ul>
-           </div>
-       </nav>
+       </ul>
+   </div>
+   </nav>
 
 
 
 
+     <footer class="text-center">
+         <a class="btn btn-lg col-xs-12 footer-button btn-dark " role="button" href="#">
+             <i class="fas fa-donate"></i>Click here to donate</a>
+         </div>
+     </footer>
+     <!--Scripts-->
+     <!--My scripts-->
+     <script src="/scripts/main.js"></script>
+     <!--Assets-->
+     <!--Bootstrap-->
+     <!--Local Dependencies-->
      <script src='/assets/bootstrap/js/bootstrap.min.js'></script>
      <!--CDN Dependencies-->
      <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -83,5 +98,6 @@
      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
          integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
      </script>
-</body>
-</html>
+     </body>
+
+     </html>
