--- a/donate.html
+++ b/donate.html
@@ -49,6 +49,10 @@
 
             </ul>
             <ul class="navbar-nav ml-auto">
+                 <li class="nav-item">
+                     <a class="nav-link" href="/index.html">
+                         <i class="fas fa-home"></i>Home</a>
+                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/learn.html">
                         <i class="fas fa-graduation-cap"></i>Curriculum</a>
@@ -73,9 +77,44 @@
             </ul>
         </div>
     </nav>
-
-
-
+<br><br><br>
+    <div class="container text-center">
+    <h1>Become a Supporter</h1>
+    <p>freeCodeCamp.org is a tiny nonprofit that's helping millions of people learn to code for free.</p>
+    <p>Join 4,771 supporters.</p>
+    <p>Your $5 / month donation will help keep tech education free and open.</p>
+    </div>
+    <div class="container spacer"></div>
+    <br>
+         <form class="container " action="/">
+            
+            <div class="row">
+                <div class="col-sm-7">
+                    <img class="img-fluid"src="/images/pics/code-group.jpg" alt="">
+                </div>
+                <div class="col-sm-5 mt-4">
+                     <br>
+             <div class="form-group">
+                 <label for="email">Email address:</label>
+                 <input type="email" placeholder="me@example.com" class="form-control" id="email">
+             </div>
+             <div class="form-group">
+                 <label for="Credit">Credit Card Number:</label>
+                 <input type="text" placeholder="1234 5678 9012 3456" class="form-control"  id="pwd">
+             </div>
+             <div class="form-group">
+                 <label for="Expiration">Card Expiration</label>
+                 <input type="text" placeholder="MM/YY" class="form-control" id="exp">
+             </div>
+             <div class="form-group">
+                 <label for="Credit">Credit Card Number:</label>
+                 <input type="txt" placeholder="CVC" class="form-control" id="cvc">
+             </div>
+             <button type="submit" class="btn btn-default">Submit</button>
+              </div>
+              </div>
+         </form>
+        
 
     <footer class="text-center">
         <a class="btn btn-lg col-xs-12 footer-button btn-dark " role="button" href="#">
