--- a/login.html
+++ b/login.html
@@ -46,9 +46,13 @@
         </button>
         <div class="navbar-collapse collapse collapsed" id="navbar-collapse">
             <ul class="navbar-nav mr-auto">
-
             </ul>
+             
             <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/index.html">
+                        <i class="fas fa-home"></i>Home</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/learn.html">
                         <i class="fas fa-graduation-cap"></i>Curriculum</a>
@@ -73,15 +77,47 @@
             </ul>
         </div>
     </nav>
-
-
-
-
-    <footer class="text-center">
-        <a class="btn btn-lg col-xs-12 footer-button btn-dark " role="button" href="#">
-            <i class="fas fa-donate"></i>Click here to donate</a>
+    <br><br><br>
+    <div class="container mt-4 text-center">
+        <h1>Continue With</h1>
+        <div class="row">
+        <div class="col-sm-2"><img id="login-pic" src="/images/pics/long-coder.jpg" alt=""></div>
+        <div class="col-sm-10">
+        <div class="row mb-4">
+            <div class="col-sm-3"></div>
+            <div  class="mx-auto my-4 col-sm-3 login-tile google">
+                <a class="login-link"
+                    href="https://accounts.google.com/signin/oauth/identifier?client_id=826551350114-oi2e02j2ub945js34vsso6v2h0blm37c.apps.googleusercontent.com&as=DPfgD6INW2bHvn70xxB8XA&destination=https%3A%2F%2Fauth.freecodecamp.org&approval_state=!ChRXYkpwM0NIRS1Wa0RPSHJ1SXJ3NBIfTTZJQzUyR3ZwZUlRQU9FaERQUmpBazFxLWo5U3BoWQ%E2%88%99AJDr988AAAAAXMc-CyEqZnQmwgpqvcylhYnGPcPV1c8G&oauthgdpr=1&xsrfsig=ChkAeAh8T6TXyGi8LPnjyBlw8I_t014WBftcEg5hcHByb3ZhbF9zdGF0ZRILZGVzdGluYXRpb24SBXNvYWN1Eg9vYXV0aHJpc2t5c2NvcGU&flowName=GeneralOAuthFlow">
+                    <i class="fab fa-google fa-6x"></i></a></div>
+               <div class="col-sm-1"></div>
+                    <div class=" mx-auto my-4 col-sm-3 login-tile github">
+                    <a class="login-link"
+                        href="https://freecodecamp/signin">
+                        <i class="fab fa-github fa-6x"></i></a></div>
+                        <div class="col-sm-2"></div>
         </div>
-    </footer>
+        <div class="row mt-4 ">
+             <div class="col-sm-3"></div>
+                <div  class="mx-auto my-4 col-sm-3 login-tile facebook">
+                    <a class="login-link"
+                        href="https://www.facebook.com/login.php?skip_api_login=1&api_key=1531963263514919&kid_directed_site=0&app_id=1531963263514919&signed_next=1&next=https%3A%2F%2Fwww.facebook.com%2Fdialog%2Foauth%3Fresponse_type%3Dcode%26redirect_uri%3Dhttps%253A%252F%252Fauth.freecodecamp.org%252Flogin%252Fcallback%26scope%3Demail%26state%3DOQfmnYbxwpMmCTu0lxbqFoWjj4wWWTBQ%26client_id%3D1531963263514919%26ret%3Dlogin%26fallback_redirect_uri%3D41409d44-5163-fa4b-9c0a-56e51feb1182&cancel_url=https%3A%2F%2Fauth.freecodecamp.org%2Flogin%2Fcallback%3Ferror%3Daccess_denied%26error_code%3D200%26error_description%3DPermissions%2Berror%26error_reason%3Duser_denied%26state%3DOQfmnYbxwpMmCTu0lxbqFoWjj4wWWTBQ%23_%3D_&display=page&locale=en_US">
+                        <i class="fab fa-facebook fa-6x"></i></a></div>
+                 <div class="col-sm-1"></div>
+                        <div  class="mx-auto my-4 col-sm-3 login-tile email ">
+                     <a class="login-link" href="https://freecodecamp/signin">
+                         <i class="fa fa-envelope fa-6x"></i></a></div>
+                          <div class="col-sm-2"></div>
+            </div>
+        </div>
+        </div>
+    </div>
+
+  <footer class="text-center signin-footer">
+      <a class="btn btn-lg col-xs-12 footer-button btn-dark " role="button" href="#">
+          <i class="fas fa-donate"></i>Click here to donate</a>
+      </div>
+  </footer>
+   
     <!--Scripts-->
     <!--My scripts-->
     <script src="/scripts/main.js"></script>
