--- a/learn.html
+++ b/learn.html
@@ -67,10 +67,10 @@
                <a class="nav-link" href="https://forum.freecodecamp.org/">
                    <i class="far fa-comments"></i>Forums</a>
            </li>
-           <li class="nav-item">
-               <a class="nav-link" href="https://freecodecamp.org/signin">
-                   <i class="far fa-user-circle"></i>Sign in</a>
-           </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/login.html">
+                    <i class="far fa-user-circle"></i>Sign in</a>
+            </li>
 
        </ul>
    </div>
