moved donate button

--- a/donate.html
+++ b/donate.html
@@ -110,17 +110,13 @@
                  <label for="Credit">Credit Card Number:</label>
                  <input type="txt" placeholder="CVC" class="form-control" id="cvc">
              </div>
-             <button type="submit" class="btn btn-default">Submit</button>
+             <a class="btn btn-lg col-xs-12 footer-button btn-dark " role="button"type="submit" href="#">
+                 <i class="fas fa-donate"></i>Click here to donate</a>
               </div>
               </div>
          </form>
         
 
-    <footer class="text-center">
-        <a class="btn btn-lg col-xs-12 footer-button btn-dark " role="button" href="#">
-            <i class="fas fa-donate"></i>Click here to donate</a>
-        </div>
-    </footer>
     <!--Scripts-->
     <!--My scripts-->
     <script src="/scripts/main.js"></script>
