donation link index fixed

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             interactive coding lessons - all freely available to the public. We also have thousands of freeCodeCamp study groups
             around the world.</p>
             <p>Donations to freeCodeCamp go toward our education initiatives, and help pay for servers, services, and staff. 
-            <a id="tax-donation-link" class="btn btn-lg col-xs-12 btn-dark main-button" role="button" href="https://donate.freecodecamp.org/" target="_blank">
+            <a id="tax-donation-link" class="btn btn-lg col-xs-12 btn-dark main-button" role="button" href="/donate.html" target="_blank">
                 <i class="fas fa-donate"></i>Make a tax-deductible donation here</a>
                
         </section>
